--- a/src/app/components/ficha-tratamiento/ficha-tratamiento-form/ficha-tratamiento-form.component.css
+++ b/src/app/components/ficha-tratamiento/ficha-tratamiento-form/ficha-tratamiento-form.component.css
@@ -16,6 +16,12 @@
     border-bottom: 5px solid #284b63;
 }
 
+.btn-dictado, .btn-dictado:hover, .btn-dictado:disabled, .btn-dictado:focus {
+    margin-top: 0px;
+    height: 100%;
+    width: 100%;
+}
+
 .form-control.ng-touched.ng-invalid {
     border: 2px solid red;
 }
