--- a/src/app/components/paciente/paciente-form/paciente-form.component.html
+++ b/src/app/components/paciente/paciente-form/paciente-form.component.html
@@ -18,7 +18,7 @@
                                 <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
                                 <input id="nombre-paciente" name="nombre-paciente" type="text" class="form-control"
                                     [(ngModel)]="paciente.nombre" ngModel #nombrePaciente="ngModel" required
-                                    minlength="3" maxlength="30" pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
+                                    minlength="3" maxlength="30" pattern="^(?!\s)^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
 
                                 <!-- Manejo de errores -->
                                 <div *ngIf="nombrePaciente?.invalid && (nombrePaciente?.touched || nombrePaciente?.dirty)"
@@ -31,7 +31,9 @@
                                             caracteres!</small>
                                     </div>
                                     <div *ngIf="nombrePaciente.errors?.pattern">
-                                        <small class="text-danger">El nombre no debe contener dígitos ni caracteres
+                                        <small class="text-danger">El/los nombre(s) no debe(n) comenzar con un espacio
+                                            en blanco,
+                                            contener dígitos ni caracteres
                                             especiales!</small>
                                     </div>
                                 </div>
@@ -47,7 +49,7 @@
                                 <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
                                 <input id="apellido-paciente" name="apellido-paciente" type="text" class="form-control"
                                     [(ngModel)]="paciente.apellido" ngModel #apellidoPaciente="ngModel" required
-                                    minlength="3" maxlength="30" pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
+                                    minlength="3" maxlength="30" pattern="^(?!\s)^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
 
                                 <!-- Manejo de errores -->
                                 <div *ngIf="apellidoPaciente?.invalid && (apellidoPaciente?.touched || apellidoPaciente?.dirty)"
@@ -61,8 +63,10 @@
                                             caracteres!</small>
                                     </div>
                                     <div *ngIf="apellidoPaciente.errors?.pattern">
-                                        <small class="text-danger">El/los apellido(s) no debe(n) contener dígitos ni
-                                            caracteres especiales!</small>
+                                        <small class="text-danger">El/los apellido(s) no debe(n) comenzar con un espacio
+                                            en blanco,
+                                            contener dígitos ni caracteres
+                                            especiales!</small>
                                     </div>
                                 </div>
                             </div>
@@ -82,7 +86,7 @@
                                 <span class="input-group-text">+569</span>
                                 <input id="telefono-paciente" name="telefono-paciente" type="text" class="form-control"
                                     [(ngModel)]="paciente.telefono" ngModel #telefonoPaciente="ngModel" required
-                                    minlength="8" maxlength="8" pattern="^[0-9]+$">
+                                    minlength="8" maxlength="8" pattern="^(?!\s)^[0-9]+$">
                                 <div class="col-lg-12">
                                     <small class="form-text text-secondary">No es necesario que ingrese "+569"</small>
                                 </div>
@@ -142,7 +146,7 @@
                                 <input id="ocupacion-paciente" name="ocupacion-paciente" type="text"
                                     class="form-control" [(ngModel)]="paciente.ocupacion" ngModel
                                     #ocupacionPaciente="ngModel" required maxlength="30"
-                                    pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
+                                    pattern="^(?!\s)^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
 
                                 <!-- Manejo de errores -->
                                 <div *ngIf="ocupacionPaciente?.invalid && (ocupacionPaciente?.touched || ocupacionPaciente?.dirty)"
@@ -152,7 +156,8 @@
                                             paciente!</small>
                                     </div>
                                     <div *ngIf="ocupacionPaciente.errors?.pattern">
-                                        <small class="text-danger">No se permite el ingreso de dígitos o caracteres
+                                        <small class="text-danger">No se permite el ingreso de un espacio en blanco al
+                                            comienzo, ni de dígitos o caracteres
                                             especiales!</small>
                                     </div>
                                 </div>
@@ -168,14 +173,19 @@
                                 <span class="input-group-text"><i class="bi bi-person-badge-fill"></i></span>
                                 <input id="institucion-paciente" name="institucion-paciente" type="text"
                                     class="form-control" [(ngModel)]="paciente.institucion" ngModel
-                                    #institucionPaciente="ngModel" required maxlength="30">
+                                    #institucionPaciente="ngModel" required maxlength="30"
+                                    pattern="^(?!\s)^[0-9a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
 
                                 <!-- Manejo de errores -->
                                 <div *ngIf="institucionPaciente?.invalid && (institucionPaciente?.touched || institucionPaciente?.dirty)"
                                     class="col-lg-12">
-                                    <div *ngIf="ocupacionPaciente.errors?.required">
+                                    <div *ngIf="institucionPaciente.errors?.required">
                                         <small class="text-danger">Se debe ingresar la institución en la que se
                                             desempeña el paciente!</small>
+                                    </div>
+                                    <div *ngIf="institucionPaciente.errors?.pattern">
+                                        <small class="text-danger">No se puede comenzar con un espacio en
+                                            blanco!</small>
                                     </div>
                                 </div>
                             </div>
@@ -194,7 +204,8 @@
                                 <span class="input-group-text"><i class="bi bi-file-medical-fill"></i></span>
                                 <input id="afiliacion-salud-paciente" name="afiliacion-salud-paciente" type="text"
                                     class="form-control" [(ngModel)]="paciente.afiliacionSalud" ngModel
-                                    #afiliacionSaludPaciente="ngModel" required maxlength="30">
+                                    #afiliacionSaludPaciente="ngModel" required maxlength="30"
+                                    pattern="^(?!\s)^[0-9a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
 
                                 <!-- Manejo de errores -->
                                 <div *ngIf="afiliacionSaludPaciente?.invalid && (afiliacionSaludPaciente?.touched || afiliacionSaludPaciente?.dirty)"
@@ -202,6 +213,10 @@
                                     <div *ngIf="afiliacionSaludPaciente.errors?.required">
                                         <small class="text-danger">Se debe ingresar la afiliación de salud del
                                             paciente!</small>
+                                    </div>
+                                    <div *ngIf="afiliacionSaludPaciente.errors?.pattern">
+                                        <small class="text-danger">No se puede comenzar con un espacio en
+                                            blanco!</small>
                                     </div>
                                 </div>
                             </div>
@@ -217,7 +232,7 @@
                                 <input id="estado-civil-paciente" name="estado-civil-paciente" type="text"
                                     class="form-control" [(ngModel)]="paciente.estadoCivil" ngModel
                                     #estadoCivilPaciente="ngModel" required maxlength="30"
-                                    pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
+                                    pattern="^(?!\s)^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
 
                                 <!-- Manejo de errores -->
                                 <div *ngIf="estadoCivilPaciente?.invalid && (estadoCivilPaciente?.touched || estadoCivilPaciente?.dirty)"
@@ -227,7 +242,8 @@
                                             paciente!</small>
                                     </div>
                                     <div *ngIf="estadoCivilPaciente.errors?.pattern">
-                                        <small class="text-danger">No se permite el ingreso de dígitos o caracteres
+                                        <small class="text-danger">No se permite comenzar con un espacio en blanco, el
+                                            ingreso de dígitos o caracteres
                                             especiales!</small>
                                     </div>
                                 </div>
@@ -247,7 +263,8 @@
                                 <span class="input-group-text"><i class="bi bi-people-fill"></i></span>
                                 <textarea name="grupo-familiar-paciente" id="grupo-familiar-paciente" cols="12" rows="3"
                                     class="form-control" ngModel [(ngModel)]="paciente.familiaNuclear"
-                                    #familiaNuclear="ngModel" required maxlength="1000"></textarea>
+                                    #familiaNuclear="ngModel" required maxlength="1000"
+                                    pattern="^(?!\s)^[0-9a-zA-ZÀ-ÿ!¡¿?.,;:\-\\\_@'()=+*/#$&%\[\]\{\}\u00f1\u00d1\s]+$"></textarea>
                                 <span class="input-group-text">
                                     <!-- Si no se ha comenzado a grabar, se despliega botón que permite iniciar el dictado -->
                                     <button (click)="record()" *ngIf="!recording" title="Iniciar dictado por voz"
@@ -267,6 +284,10 @@
                                 class="col-lg-12">
                                 <div *ngIf="familiaNuclear.errors?.required">
                                     <small class="text-danger">Se debe ingresar el grupo familiar del paciente!</small>
+                                </div>
+                                <div *ngIf="familiaNuclear.errors?.pattern">
+                                    <small class="text-danger">El texto no puede comenzar con un espacio en
+                                        blanco.</small>
                                 </div>
                                 <div *ngIf="familiaNuclear.errors && !familiaNuclear.errors?.required">
                                     <small class="text-danger">Sólo se permite un máximo de 1000 caracteres!</small>
@@ -291,8 +312,7 @@
                     </div>
                     <div class="col-lg-5 text-right">
                         <!-- Cancelar operación/volver -->
-                        <button
-                            (click)="back(nombrePaciente.value, apellidoPaciente.value, telefonoPaciente.value, 
+                        <button (click)="back(nombrePaciente.value, apellidoPaciente.value, telefonoPaciente.value, 
                             fechaNacimientoPaciente.value, ocupacionPaciente.value, institucionPaciente.value, 
                             afiliacionSaludPaciente.value, estadoCivilPaciente.value, familiaNuclear.value)"
                             class="btn btn-primary" type="button">Volver</button>
