agrega input de e-mail a formularios relacionados con el paciente

--- a/src/app/components/hora-atencion/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.css
+++ b/src/app/components/hora-atencion/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.css
@@ -68,6 +68,10 @@
     overflow-wrap: break-word;
 }
 
+.overflow {
+    overflow-wrap: break-word;
+}
+
 .table-dark {
     background-color: #284b63;
 }
