--- a/src/app/components/hora-atencion/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.html
+++ b/src/app/components/hora-atencion/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.html
@@ -181,6 +181,25 @@
           </div>
         </div>
 
+        <!-- E-mail -->
+        <div class="col-lg-12">
+          <div class="form-group">
+            <label for="email-paciente">E-mail</label>
+            <div class="input-group">
+              <span class="input-group-text"><i class="bi bi-at"></i></span>
+              <input id="email-paciente" name="email-paciente" type="email" class="form-control" [(ngModel)]="email"
+                ngModel #emailPaciente="ngModel" email>
+
+              <!-- Manejo de errores -->
+              <div *ngIf="emailPaciente.invalid && (emailPaciente.touched || emailPaciente.dirty)" class="col-lg-12">
+                <div *ngIf="emailPaciente.errors">
+                  <small class="text-danger">Se debe ingresar un e-mail válido.</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <!-- Afiliación de salud -->
         <div class="col-lg-12">
           <div class="form-group">
@@ -211,7 +230,7 @@
           <div class="row">
             <div class="col-lg text-left">
               <button
-                [disabled]="nombrePaciente.invalid || apellidoPaciente.invalid || telefonoPaciente.invalid || afiliacionSaludPaciente.invalid"
+                [disabled]="nombrePaciente.invalid || apellidoPaciente.invalid || telefonoPaciente.invalid || afiliacionSaludPaciente.invalid || emailPaciente.invalid" 
                 (click)="guardarNuevoPaciente()" class="btn btn-primary" type="button">Guardar datos</button>
             </div>
             <div class="col-lg text-right">
@@ -235,6 +254,12 @@
       <div class="col-lg-12 on-display-text">
         <i class="bi bi-telephone-forward-fill on-display-icon"></i>
         <h4>{{paciente.telefono}}</h4>
+      </div>
+
+      <!-- E-mail del paciente -->
+      <div *ngIf="paciente.email" class="col-lg-12 on-display-text">
+        <i class="bi bi-at on-display-icon"></i>
+        <h4 class="overflow">{{paciente.email}}</h4>
       </div>
 
       <!-- Afiliación de salud del paciente -->
@@ -337,6 +362,25 @@
                 <div *ngIf="telefonoPaciente.errors?.pattern">
                   <small class="text-danger">El número de teléfono solo debe contener
                     dígitos!</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- E-mail -->
+        <div class="col-lg-12">
+          <div class="form-group">
+            <label for="email-paciente">E-mail</label>
+            <div class="input-group">
+              <span class="input-group-text"><i class="bi bi-at"></i></span>
+              <input id="email-paciente" name="email-paciente" type="email" class="form-control" [(ngModel)]="paciente.email"
+                ngModel #emailPaciente="ngModel" email>
+
+              <!-- Manejo de errores -->
+              <div *ngIf="emailPaciente.invalid && (emailPaciente.touched || emailPaciente.dirty)" class="col-lg-12">
+                <div *ngIf="emailPaciente.errors">
+                  <small class="text-danger">Se debe ingresar un e-mail válido.</small>
                 </div>
               </div>
             </div>
