--- a/src/app/components/paciente/paciente-form/paciente-form.component.html
+++ b/src/app/components/paciente/paciente-form/paciente-form.component.html
@@ -11,7 +11,7 @@
                 <div class="row">
 
                     <!-- Nombre paciente -->
-                    <div class="col-lg-6">
+                    <div class="col-lg-4">
                         <div class="form-group">
                             <label for="nombre-paciente">Nombre:</label>
                             <div class="input-group">
@@ -42,7 +42,7 @@
                     </div>
 
                     <!-- Apellido del paciente -->
-                    <div class="col-lg-6">
+                    <div class="col-lg-4">
                         <div class="form-group">
                             <label for="apellido-paciente">Apellidos:</label>
                             <div class="input-group">
@@ -72,13 +72,9 @@
                             </div>
                         </div>
                     </div>
-
-                </div>
-
-                <div class="row">
-
+                    
                     <!-- Teléfono del paciente -->
-                    <div class="col-lg-6">
+                    <div class="col-lg-4">
                         <div class="form-group">
                             <label for="telefono-paciente">Telefono:</label>
                             <div class="input-group">
@@ -111,6 +107,10 @@
                         </div>
                     </div>
 
+                </div>
+
+                <div class="row">
+
                     <!-- Fecha de nacimiento -->
                     <div class="col-lg-6">
                         <div class="form-group">
@@ -133,6 +133,26 @@
                         </div>
                     </div>
 
+                    <!-- E-mail -->
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            <label for="email-paciente">E-mail</label>
+                            <div class="input-group">
+                                <span class="input-group-text"><i class="bi bi-at"></i></span>
+                                <input id="email-paciente" name="email-paciente" type="email" class="form-control"
+                                    [(ngModel)]="paciente.email" ngModel #emailPaciente="ngModel" email>
+
+                                <!-- Manejo de errores -->
+                                <div *ngIf="emailPaciente.invalid && (emailPaciente.touched || emailPaciente.dirty)"
+                                    class="col-lg-12">
+                                    <div *ngIf="emailPaciente.errors">
+                                        <small class="text-danger">Se debe ingresar un e-mail válido.</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="row">
@@ -145,7 +165,7 @@
                                 <span class="input-group-text"><i class="bi bi-briefcase-fill"></i></span>
                                 <input id="ocupacion-paciente" name="ocupacion-paciente" type="text"
                                     class="form-control" [(ngModel)]="paciente.ocupacion" ngModel
-                                    #ocupacionPaciente="ngModel" required maxlength="30"
+                                    #ocupacionPaciente="ngModel" required maxlength="100"
                                     pattern="^(?!\s)^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
 
                                 <!-- Manejo de errores -->
@@ -157,7 +177,7 @@
                                     </div>
                                     <div *ngIf="ocupacionPaciente.errors?.pattern">
                                         <small class="text-danger">No se permite el ingreso de un espacio en blanco al
-                                            comienzo, ni de dígitos o caracteres
+                                            comienzo, ni el ingreso de dígitos o caracteres
                                             especiales!</small>
                                     </div>
                                 </div>
@@ -173,8 +193,8 @@
                                 <span class="input-group-text"><i class="bi bi-person-badge-fill"></i></span>
                                 <input id="institucion-paciente" name="institucion-paciente" type="text"
                                     class="form-control" [(ngModel)]="paciente.institucion" ngModel
-                                    #institucionPaciente="ngModel" required maxlength="30"
-                                    pattern="^(?!\s)^[0-9a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
+                                    #institucionPaciente="ngModel" required maxlength="100"
+                                    pattern="^(?!\s)^[0-9a-zA-ZÀ-ÿ-\u00f1\u00d1\s]+$">
 
                                 <!-- Manejo de errores -->
                                 <div *ngIf="institucionPaciente?.invalid && (institucionPaciente?.touched || institucionPaciente?.dirty)"
@@ -185,7 +205,7 @@
                                     </div>
                                     <div *ngIf="institucionPaciente.errors?.pattern">
                                         <small class="text-danger">No se puede comenzar con un espacio en
-                                            blanco!</small>
+                                            blanco, ni caracteres especiales!</small>
                                     </div>
                                 </div>
                             </div>
@@ -204,7 +224,7 @@
                                 <span class="input-group-text"><i class="bi bi-file-medical-fill"></i></span>
                                 <input id="afiliacion-salud-paciente" name="afiliacion-salud-paciente" type="text"
                                     class="form-control" [(ngModel)]="paciente.afiliacionSalud" ngModel
-                                    #afiliacionSaludPaciente="ngModel" required maxlength="30"
+                                    #afiliacionSaludPaciente="ngModel" required maxlength="100"
                                     pattern="^(?!\s)^[0-9a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
 
                                 <!-- Manejo de errores -->
@@ -231,7 +251,7 @@
                                 <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
                                 <input id="estado-civil-paciente" name="estado-civil-paciente" type="text"
                                     class="form-control" [(ngModel)]="paciente.estadoCivil" ngModel
-                                    #estadoCivilPaciente="ngModel" required maxlength="30"
+                                    #estadoCivilPaciente="ngModel" required maxlength="100"
                                     pattern="^(?!\s)^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
 
                                 <!-- Manejo de errores -->
@@ -263,8 +283,7 @@
                                 <span class="input-group-text"><i class="bi bi-people-fill"></i></span>
                                 <textarea name="grupo-familiar-paciente" id="grupo-familiar-paciente" cols="12" rows="3"
                                     class="form-control" ngModel [(ngModel)]="paciente.familiaNuclear"
-                                    #familiaNuclear="ngModel" required maxlength="1000"
-                                    pattern="^(?!\s)^[0-9a-zA-ZÀ-ÿ!¡¿?.,;:\-\\\_@'()=+*/#$&%\[\]\{\}\u00f1\u00d1\s]+$"></textarea>
+                                    #familiaNuclear="ngModel" required maxlength="1000"></textarea>
                                 <span class="input-group-text">
                                     <!-- Si no se ha comenzado a grabar, se despliega botón que permite iniciar el dictado -->
                                     <button (click)="record()" *ngIf="!recording" title="Iniciar dictado por voz"
@@ -285,10 +304,6 @@
                                 <div *ngIf="familiaNuclear.errors?.required">
                                     <small class="text-danger">Se debe ingresar el grupo familiar del paciente!</small>
                                 </div>
-                                <div *ngIf="familiaNuclear.errors?.pattern">
-                                    <small class="text-danger">El texto no puede comenzar con un espacio en
-                                        blanco.</small>
-                                </div>
                                 <div *ngIf="familiaNuclear.errors && !familiaNuclear.errors?.required">
                                     <small class="text-danger">Sólo se permite un máximo de 1000 caracteres!</small>
                                 </div>
@@ -307,14 +322,14 @@
                         <!-- Guardar cambios -->
                         <button [disabled]="nombrePaciente.invalid || apellidoPaciente.invalid || telefonoPaciente.invalid 
 || fechaNacimientoPaciente.invalid || ocupacionPaciente.invalid || institucionPaciente.invalid
-|| afiliacionSaludPaciente.invalid || estadoCivilPaciente.invalid || familiaNuclear.invalid" type="submit"
+|| afiliacionSaludPaciente.invalid || estadoCivilPaciente.invalid || familiaNuclear.invalid || emailPaciente.invalid" type="submit"
                             class="btn btn-primary">Guardar cambios</button>
                     </div>
                     <div class="col-lg-5 text-right">
                         <!-- Cancelar operación/volver -->
                         <button (click)="back(nombrePaciente.value, apellidoPaciente.value, telefonoPaciente.value, 
                             fechaNacimientoPaciente.value, ocupacionPaciente.value, institucionPaciente.value, 
-                            afiliacionSaludPaciente.value, estadoCivilPaciente.value, familiaNuclear.value)"
+                            afiliacionSaludPaciente.value, estadoCivilPaciente.value, familiaNuclear.value, emailPaciente.value)"
                             class="btn btn-primary" type="button">Volver</button>
                     </div>
                 </div>
