continúa implementación de control de acceso a recursos

--- a/src/app/components/hora-atencion/agenda/agenda.component.html
+++ b/src/app/components/hora-atencion/agenda/agenda.component.html
@@ -31,7 +31,7 @@
             <h3>Horarios del día</h3>
         </div>
         <div class="col-lg-4 text-right" id="button-div">
-            <button class="btn btn-primary" [routerLink]="['nuevo-horario']"><i class="bi bi-plus"></i>Nuevo
+            <button class="btn btn-primary" [routerLink]="['../nuevo-horario']"><i class="bi bi-plus"></i>Nuevo
                 horario</button>
         </div>
     </div>
