--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
                             <div class="input-group">
                                 <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
                                 <input id="username" name="username" type="text" class="form-control" ngModel
-                                    #username="ngModel" [(ngModel)]="usuario.username" autofocus required
+                                    #username="ngModel" [(ngModel)]="usuario.username" required
                                     maxlength="20">
                             </div>
 
