--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,17 +1,27 @@
-#brand {
-    font-size: 28px;
+.login-navbar {
+    height: 150px;
+    border-radius: 10px;
+    width: 35vw;
+    margin: 0 auto;
+    margin-top: 20px;
 }
 
-#contenido {
-    border-left: 2px solid #fff;
-    padding-left: 20px;
-}
-
-.navbar {
-    height: 100px;
+.navbar-brand {
+    font-size: 30px;
 }
 
 a {
-    color: #fff;
     font-size: 25px;
+    cursor: pointer;
+}
+
+h1, h3 {
+    color: #fff;
+}
+
+nav {
+    margin: 0 auto;
+    height: 105px;
+    width: 73.7vw;
+    border-radius: 10px;
 }
