--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #284b63;">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="" id="brand">Dr. Patricio Lara Hadi | Consulta psicológica</a>
-        <!-- ARREGLAR BOTÓN DE COLAPSE! -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#contenido"
-            aria-controls="contenido" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="contenido">
-            <ul class="navbar-nav me-auto mb-2  mb-lg-0">
-                <li class="nav-item">
-                    <a [routerLink]="['']" class="nav-link active" aria-current="page">Agenda</a>
-                </li>
-                <li class="nav-item">
-                    <a [routerLink]="['pacientes/page/0']" class="nav-link active" aria-current="page">Pacientes</a>
-                </li>
-            </ul>   
+<div class="text-center">
+    <nav [ngClass]="{'login-navbar' : !auth.isAuthenticated()}" class="navbar navbar-expand-lg navbar-dark"
+        style="background-color: #284b63;">
+        <div class="container-fluid">
+            <div *ngIf="!auth.isAuthenticated()" class="col-lg-12 text-center">
+                <h3>Consulta psicológica</h3>
+                <h1>Dr. Patricio Lara Hadi</h1>
+            </div>
+            <a *ngIf="auth.isAuthenticated()" class="navbar-brand" href="#">Dr. Patricio Lara Hadi | Consulta
+                psicológica</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul *ngIf="auth.isAuthenticated()" class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/agenda']">Agenda</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/pacientes/page/0']">Pacientes</a>
+                    </li>
+                </ul>
+                <ul *ngIf="auth.isAuthenticated()" class="navbar-nav navbar-right">
+                    <li class="nav-item">
+                        <a (click)="logout()" class="nav-link">Cerrar Sesión</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+</div>
 
 <router-outlet></router-outlet>
