--- a/src/app/components/hora-atencion/agenda/horario/horario.component.html
+++ b/src/app/components/hora-atencion/agenda/horario/horario.component.html
@@ -152,7 +152,7 @@
                         <div class="col-lg-12 text-center" *ngIf="!horario.pago && horario.asistencia != -1">
                             <h5>No se ha registrado el pago por este horario de atención</h5>
                             <h5>¿Desea registrarlo?</h5>
-                            <button [routerLink]="['horario/pago', horario.idAtencion]"
+                            <button [routerLink]="['../horario/pago', horario.idAtencion]"
                                 class="btn btn-primary confirmacion" type="button" data-dismiss="modal">Registrar
                                 pago</button>
                         </div>
@@ -195,7 +195,7 @@
                 </div>
             </div>
             <div class=" modal-footer" *ngIf="horario.pago">
-                <button [routerLink]="['horario/pago', horario.idAtencion, horario.pago.idPago]"
+                <button [routerLink]="['../horario/pago', horario.idAtencion, horario.pago.idPago]"
                     class="btn btn-primary" type="button" data-dismiss="modal">Modificar pago</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
             </div>
