--- a/src/app/components/paciente/lista-pacientes.component.css
+++ b/src/app/components/paciente/lista-pacientes.component.css
@@ -1,5 +1,4 @@
 #main {
-    margin-top: 40px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     background-color: #fff;
     border-radius: 15px;
@@ -14,7 +13,7 @@
 }
 
 .date {
-    margin-top: 30px;
+    padding-top: 30px;
 }
 
 .modal-content {
