--- a/src/app/components/paciente/lista-pacientes.component.html
+++ b/src/app/components/paciente/lista-pacientes.component.html
@@ -31,7 +31,7 @@
                             <td>
                                 <div class="row">
                                     <div class="col-lg-12 text-center">
-                                        <button [routerLink]="['../../', paciente.idPaciente]" class="btn btn-primary"
+                                        <button *ngIf="auth.hasRole('ROLE_PSICOLOGO_TRATANTE')" [routerLink]="['../../', paciente.idPaciente]" class="btn btn-primary"
                                             type="button">Ver detalle</button>
                                         <button [routerLink]="['../../atenciones', paciente.idPaciente]"
                                             class="btn btn-primary" type="button">Ver
@@ -47,7 +47,7 @@
                         <app-paginador *ngIf="paginador" [paginador]='paginador'></app-paginador>
                     </div>
                     <div class="col-lg-6 text-right">
-                        <button [routerLink]="['../../historial/page/0']" class="btn btn-primary"
+                        <button *ngIf="auth.hasRole('ROLE_PSICOLOGO_TRATANTE')" [routerLink]="['../../historial/page/0']" class="btn btn-primary"
                             type="button">Historial de pacientes</button>
                     </div>
                 </div>
