--- a/src/app/components/pago/pago-form/pago-form.component.html
+++ b/src/app/components/pago/pago-form/pago-form.component.html
@@ -19,7 +19,8 @@
                                 <input required [readOnly]="!modificarAfiliacion.checked"
                                     value="{{horarioAtencion.paciente.afiliacionSalud}}" type="text" ngModel
                                     #afiliacionPaciente="ngModel" class="form-control" id="afiliacion-pago"
-                                    name="afiliacion-pago" [(ngModel)]="afiliacion" maxlength="30">
+                                    name="afiliacion-pago" [(ngModel)]="afiliacion" maxlength="30"
+                                    pattern="^(?!\s)^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
                             </div>
                             <div class="col-lg-12 text-left">
                                 <input class="form-check-input" type="checkbox" name="modificar-afiliacion"
@@ -33,6 +34,10 @@
                                 <div *ngIf="afiliacionPaciente.errors?.required">
                                     <small class="text-danger">Se debe ingresar la afiliación asociada a este
                                         pago.</small>
+                                </div>
+                                <div *ngIf="afiliacionPaciente.errors?.pattern">
+                                    <small class="text-danger">No se permite ingresar dígitos ni caracteres
+                                        especiales.</small>
                                 </div>
                             </div>
                         </div>
@@ -98,12 +103,13 @@
                 <div class="row">
                     <div class="col-lg-6 text-left">
                         <button *ngIf="!horarioAtencion.pago?.idPago; else updateButton" (click)="pay()"
-                            [disabled]="medioPago.invalid || montoPago.invalid" class="btn btn-primary" type="button"
-                            data-dismiss="modal">Registrar pago</button>
+                            [disabled]="afiliacionPaciente.errors?.pattern || medioPago.invalid || montoPago.invalid"
+                            class="btn btn-primary" type="button" data-dismiss="modal">Registrar pago</button>
 
                         <ng-template #updateButton>
                             <button (click)="updatePayment()" class="btn btn-primary" type="button"
-                                [disabled]="medioPago.invalid || montoPago.invalid" data-dismiss="modal">Guardar
+                                [disabled]="afiliacionPaciente.errors?.pattern || afiliacionPaciente.invalid || medioPago.invalid || montoPago.invalid"
+                                data-dismiss="modal">Guardar
                                 cambios</button>
                         </ng-template>
                     </div>
